<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"
    android:background="@drawable/card_view_background"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_germanWord_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/german_word"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_englishMeaning_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/English_Meaning"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:orientation="vertical"
        android:padding="3dp">

        <ImageButton
            android:id="@+id/img_editButton_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/edit_this_word"
            android:src="@drawable/baseline_drive_file_rename_outline_24" />

        <ImageButton
            android:id="@+id/img_delete_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_delete_24" />

        <CheckBox
            android:id="@+id/checkBox_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/check_box" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_playAudio_cardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".2"
        android:contentDescription="@string/play_pronunciation"
        android:padding="3dp"
        android:src="@drawable/baseline_volume_up_24" />


</LinearLayout>